[#68] fixed pathplanner implementation bug