@@ -83,17 +83,17 @@ public class JSONParser {
                         switch (token.type) {
                             case Yytoken.TYPE_VALUE:
                                 status = S_IN_FINISHED_VALUE;
-                                statusStack.addFirst(new Integer(status));
+                                statusStack.addFirst(Integer.valueOf(status));
                                 valueStack.addFirst(token.value);
                                 break;
                             case Yytoken.TYPE_LEFT_BRACE:
                                 status = S_IN_OBJECT;
-                                statusStack.addFirst(new Integer(status));
+                                statusStack.addFirst(Integer.valueOf(status));
                                 valueStack.addFirst(createObjectContainer(containerFactory));
                                 break;
                             case Yytoken.TYPE_LEFT_SQUARE:
                                 status = S_IN_ARRAY;
-                                statusStack.addFirst(new Integer(status));
+                                statusStack.addFirst(Integer.valueOf(status));
                                 valueStack.addFirst(createArrayContainer(containerFactory));
                                 break;
                             default:
@@ -117,7 +117,7 @@ public class JSONParser {
                                     String key = (String) token.value;
                                     valueStack.addFirst(key);
                                     status = S_PASSED_PAIR_KEY;
-                                    statusStack.addFirst(new Integer(status));
+                                    statusStack.addFirst(Integer.valueOf(status));
                                 } else {
                                     status = S_IN_ERROR;
                                 }
@@ -155,7 +155,7 @@ public class JSONParser {
                                 List newArray = createArrayContainer(containerFactory);
                                 parent.put(key, newArray);
                                 status = S_IN_ARRAY;
-                                statusStack.addFirst(new Integer(status));
+                                statusStack.addFirst(Integer.valueOf(status));
                                 valueStack.addFirst(newArray);
                                 break;
                             case Yytoken.TYPE_LEFT_BRACE:
@@ -165,7 +165,7 @@ public class JSONParser {
                                 Map newObject = createObjectContainer(containerFactory);
                                 parent.put(key, newObject);
                                 status = S_IN_OBJECT;
-                                statusStack.addFirst(new Integer(status));
+                                statusStack.addFirst(Integer.valueOf(status));
                                 valueStack.addFirst(newObject);
                                 break;
                             default:
@@ -195,7 +195,7 @@ public class JSONParser {
                                 Map newObject = createObjectContainer(containerFactory);
                                 val.add(newObject);
                                 status = S_IN_OBJECT;
-                                statusStack.addFirst(new Integer(status));
+                                statusStack.addFirst(Integer.valueOf(status));
                                 valueStack.addFirst(newObject);
                                 break;
                             case Yytoken.TYPE_LEFT_SQUARE:
@@ -203,7 +203,7 @@ public class JSONParser {
                                 List newArray = createArrayContainer(containerFactory);
                                 val.add(newArray);
                                 status = S_IN_ARRAY;
-                                statusStack.addFirst(new Integer(status));
+                                statusStack.addFirst(Integer.valueOf(status));
                                 valueStack.addFirst(newArray);
                                 break;
                             default:
@@ -297,19 +297,19 @@ public class JSONParser {
                         switch (token.type) {
                             case Yytoken.TYPE_VALUE:
                                 status = S_IN_FINISHED_VALUE;
-                                statusStack.addFirst(new Integer(status));
+                                statusStack.addFirst(Integer.valueOf(status));
                                 if (!contentHandler.primitive(token.value))
                                     return;
                                 break;
                             case Yytoken.TYPE_LEFT_BRACE:
                                 status = S_IN_OBJECT;
-                                statusStack.addFirst(new Integer(status));
+                                statusStack.addFirst(Integer.valueOf(status));
                                 if (!contentHandler.startObject())
                                     return;
                                 break;
                             case Yytoken.TYPE_LEFT_SQUARE:
                                 status = S_IN_ARRAY;
-                                statusStack.addFirst(new Integer(status));
+                                statusStack.addFirst(Integer.valueOf(status));
                                 if (!contentHandler.startArray())
                                     return;
                                 break;
@@ -339,7 +339,7 @@ public class JSONParser {
                                 if (token.value instanceof String) {
                                     String key = (String) token.value;
                                     status = S_PASSED_PAIR_KEY;
-                                    statusStack.addFirst(new Integer(status));
+                                    statusStack.addFirst(Integer.valueOf(status));
                                     if (!contentHandler.startObjectEntry(key))
                                         return;
                                 } else {
@@ -377,17 +377,17 @@ public class JSONParser {
                                 break;
                             case Yytoken.TYPE_LEFT_SQUARE:
                                 statusStack.removeFirst();
-                                statusStack.addFirst(new Integer(S_IN_PAIR_VALUE));
+                                statusStack.addFirst(Integer.valueOf(S_IN_PAIR_VALUE));
                                 status = S_IN_ARRAY;
-                                statusStack.addFirst(new Integer(status));
+                                statusStack.addFirst(Integer.valueOf(status));
                                 if (!contentHandler.startArray())
                                     return;
                                 break;
                             case Yytoken.TYPE_LEFT_BRACE:
                                 statusStack.removeFirst();
-                                statusStack.addFirst(new Integer(S_IN_PAIR_VALUE));
+                                statusStack.addFirst(Integer.valueOf(S_IN_PAIR_VALUE));
                                 status = S_IN_OBJECT;
-                                statusStack.addFirst(new Integer(status));
+                                statusStack.addFirst(Integer.valueOf(status));
                                 if (!contentHandler.startObject())
                                     return;
                                 break;
@@ -429,13 +429,13 @@ public class JSONParser {
                                 break;
                             case Yytoken.TYPE_LEFT_BRACE:
                                 status = S_IN_OBJECT;
-                                statusStack.addFirst(new Integer(status));
+                                statusStack.addFirst(Integer.valueOf(status));
                                 if (!contentHandler.startObject())
                                     return;
                                 break;
                             case Yytoken.TYPE_LEFT_SQUARE:
                                 status = S_IN_ARRAY;
-                                statusStack.addFirst(new Integer(status));
+                                statusStack.addFirst(Integer.valueOf(status));
                                 if (!contentHandler.startArray())
                                     return;
                                 break;
